--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.8.3",
+    "@emotion/react": "^11.8.0",
+    "@emotion/styled": "^11.8.0",
+    "@fontsource/inter": "^4.5.4",
+    "axios": "^0.26.0",
+    "framer-motion": "^6.2.6",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "react-loader-spinner": "^5.1.4"
   },
   "devDependencies": {
     "eslint": "8.9.0",
